# nri-quantification

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  SpectrumChart.tsx  api.ts  chartInteraction.test.ts  chartInteraction.ts  styles.css  types.ts
frontend/src/test/: setup.ts
src/nir_quantification/: build.py  cli.py  constants.py  metrics.py  modeling.py  parser.py  postprocess.py  predict.py  splitting.py  train.py
src/nir_quantification/manager/: api.py  app.py  config.py  db.py  jobs.py  models.py  parsers.py  service.py
tests/: test_manager.py  test_parser.py  test_postprocess.py  test_splitting.py
