[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nir-quantification"
version = "0.1.0"
description = "Offline NIR pipeline for 14-class blended fabric quantification."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Codex" }
]
dependencies = []

[project.optional-dependencies]
train = ["torch>=2.4"]

[project.scripts]
nirq = "nir_quantification.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nir_quantification"]
