[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

[project]
name = "nir-quantification"
version = "0.1.0"
description = "Offline NIR pipeline for 14-class blended fabric quantification."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Codex" }
]
dependencies = []

[project.optional-dependencies]
train = ["torch>=2.4", "numpy>=2.1"]
web = [
  "fastapi>=0.116",
  "uvicorn>=0.35",
  "sqlalchemy>=2.0",
  "pydantic>=2.11",
]
dev = ["pytest>=8.4", "httpx>=0.28"]

[project.scripts]
nirq = "nir_quantification.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nir_quantification"]
